--- a/src/components/MainPage/SectionHotNews/HotNews.css
+++ b/src/components/MainPage/SectionHotNews/HotNews.css
@@ -10,7 +10,7 @@
 
 .card-news.w-clearfix.hotnews,
 .news.page-news .card-news.hotnews:nth-child(5) {
-    width: 20%;
+    width: 19%;
 }
 
 .hotnews {
@@ -36,6 +36,6 @@
 @media (max-width: 1100px) {
     .card-news.w-clearfix.hotnews,
     .news.page-news .card-news.hotnews:nth-child(5) {
-        width: 50%;
+        width: 49%;
     }
 }
